# biorsp

./: .artifact_audit_allowlist  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVELOPER_NOTES.md  GENE_ANALYSIS_GUIDE.md  INSTALL.md  MANIFEST.in  Makefile  QUICK_EXAMPLES.md  README.md  environment.yml  ht_raw.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  runlog.md  setup.py
.githooks/: pre-commit
.github/workflows/: benchmarks.yml  ci.yml  lint.yml  nightly.yml
analysis/: .gitignore  expC_acceptance_checks.py
analysis/benchmarks/: README.md  check_qq_points.py  compare_qq_density.py  debug_qq.py  plot_benchmarks.py  smoke_all.py  smoke_benchmarks.py  verify_qq.py
analysis/heart_case_study/: .gitignore  run.py
analysis/kidney_atlas/: README.md  Snakefile  USAGE_EXAMPLES.md  __init__.py  run_example_workflow.sh  verify_metadata.sh
benchmarks/: benchmark_angle_window.py
biorsp/: __init__.py  _version.py  adequacy.py  api.py  cli.py  config.py  constants.py  core.py  embedding.py  evaluation.py  foreground.py  genomewide.py  geometry.py  inference.py  io.py  main.py  manifest.py  moran.py  pairwise.py  peaks.py  permutation.py  pipeline_utils.py  plotting.py  power.py  preprocessing.py  radar.py  results.py  robustness.py  rsp.py  scope_cache.py  scoring.py  smoothing.py  staged_pipeline.py  stats.py  stratification.py  summaries.py  typing.py  utils.py
biorsp/core/: __init__.py  adequacy.py  compute.py  engine.py  features.py  geometry.py  inference.py  pairwise.py  qc.py  radar.py  results.py  robustness.py  scoring.py  summaries.py  types.py  typing.py  utils.py
biorsp/io/: __init__.py  loaders.py  manifest.py
biorsp/pipeline/: __init__.py  hierarchy.py  io.py
biorsp/plotting/: __init__.py  (+18 more)
configs/: biorsp_genomewide.json  biorsp_prereg.json
data/: .gitignore
dev/: plot_standardization_TODO.md  scripts_manifest.py
docs/: 00_overview.md  01_quickstart.md  02_method.md  03_inference_and_nulls.md  04_limitations_and_negative_controls.md  05_outputs_and_reproducibility.md  06_developer_guide.md  diagnostics.md  genomewide-addendum.md  glossary.md  index.md  overview.md  plot_standardization_implementation.md  prereg-plan.md  simulations_plotting.md  testing.md  theory.md  usage.md
examples/: 1_basic_scoring.py  2_advanced_config.py  README.md  gene_gene_copatterns.py  kpmp.py  kpmp_tal_analysis.py  kpmp_with_plots.py  marker_discovery.py  minimal.ipynb  multi_sample.ipynb  quickstart.py  simulation.ipynb  simulation.py
experiments/: .gitignore
figures/: embedding_properties.py
notebooks/: ht-raw.ipynb  ht-vis.ipynb  kpmp_diffmap_lab.ipynb  kpmp_tal_filter.ipynb  tal_embedding_analysis.ipynb  tal_pre_analysis.ipynb
paper_versions/: memo_v0.md  memo_v1.md
scripts/: artifact_audit.py  artifact_promote.py  benchmark_angle_window.py  data_diagnostics.py  debug_end_to_end.py  debug_selection_bias.py  genomewide_pipeline.py  install_artifact_hook.sh  make_end_to_end_workflow.py  make_polar_embedding_figure.py  make_schematic_diagram.py  moran_smoke.py  perm_smoke.py  plot_simulation_csv.py  prereg_pipeline.py  prereg_pipeline_legacy.py  rsp_smoke.py  smoke_suite.py  strata_diagnostics.py  validate_calibration.py
src/: __init__.py  null_models.py  plotting.py  preprocessing.py  radar_scan.py  stats.py  utils.py
tests/: __init__.py  conftest.py  test_abstention_contract.py  test_angle_window_optimization.py  test_benchmark_contract.py  test_benchmark_scientific_correctness.py  test_calibration_logic.py  test_case_study_pipeline.py  test_circular_sd.py  test_compute_plot_contract.py  test_compute_rsp_with_adequacy_obj.py  test_config_loading.py  test_double_weighting.py  test_entrypoints.py  test_exception_handling.py  test_expA_cell_runner.py  test_expA_null_calibration_pipeline.py  test_expc_abstention_and_power.py  test_feature_resolution.py  test_foreground.py  test_genomewide_permute.py  test_geometry.py  test_inference.py  test_inference_invariance.py  test_io.py  test_labels.py  test_localization.py  test_mask_semantics.py  test_maxstat_permutation_b.py  test_metrics_ci.py  test_moran.py  test_nan_plotting.py  test_new_method.py  test_pairwise_shared_mask.py  test_peaks.py  test_permutation.py  test_permutation_locality.py  test_pipeline_integration.py  test_pipeline_utils.py  test_plot_from_csv.py  (+32 more)
(+361 files in other folders)
