[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biorsp"
version = "0.0.0"
description = "Bayesian inference and robustness tools for RSP-style analyses (placeholder)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "pandas>=2.3.0",
    "matplotlib>=3.10.0",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.0",
    "anndata>=0.11.0",
    "scanpy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "black>=25.12.0",
    "ruff>=0.14.10",
    "flake8>=7.3.0",
    "mypy>=1.19.0",
    "pre-commit>=3.4.0",
    "isort>=7.0.0",
    "umap-learn>=0.5.5",
    "phate>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
exclude = ["**/*.ipynb", "**/__pycache__", "**/build", "**/dist", "**/*.egg-info"]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PERF"]
extend-ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["biorsp"]
combine-as-imports = true

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["biorsp"]
combine_as_imports = true
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = false
strict_optional = false

