[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biorsp"
version = "0.1.0"
description = "Directional enrichment analysis for single-cell embeddings with donor-aware statistics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "anndata",
  "scanpy",
  "leidenalg",
  "scikit-image",
  "matplotlib",
  "tabulate",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
include = ["biorsp*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  ".pytest_cache",
  "__pycache__",
  "notebooks/ht-raw.ipynb",
  "notebooks/ht-processed.ipynb",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
